# mlops_agentops

./: .gitignore  CLAUDE.md  PROGRESS.md
platform/: .dockerignore  .dvcignore  .env.example  Makefile  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
platform/.dvc/: config
platform/ci/: __init__.py  gitlab_pipeline.py  milestone1_gate.py  ml_pipeline.py  ml_tests.py  signing.py
platform/data/: __init__.py  ingest.py
platform/features/: __init__.py  feature_monitor.py  feature_store.py  feature_views.py  feedback_loop.py  materialization.py  skew_checker.py  streaming.py
platform/infra/: __init__.py  aws_deployment.py  ct_automation.py  gcp_vertex.py  gitops.py  helm_chart.py  ingress.py  k8s_autoscaling.py  k8s_gpu_storage.py  k8s_manifests.py  k8s_observability.py  kserve.py  milestone2_gate.py  portability.py  progressive_delivery.py  terraform_config.py
platform/llm/: __init__.py  compilation.py  distributed.py  finetuning_ops.py  gpu_cost.py  index_lifecycle.py  index_pipeline.py  inference_opt.py  llm_eval.py  llm_gateway.py  llm_monitoring.py  llm_observability.py  llm_serving.py  llmops_core.py  milestone3_gate.py  prompt_registry.py  quantization.py  rag_guardrails.py  ragas_eval.py  ray_train.py  retrieval.py  retrieval_eval.py  retrieval_security.py  training_opt.py  vllm_config.py  vllm_k8s.py
platform/monitoring/: __init__.py  closed_loop.py  drift.py  evidently_reporter.py  grafana_dashboard.py  prediction_logger.py  prometheus_metrics.py  reference_stats.py  skew_detector.py  slo.py  taxonomy.py
platform/pipelines/: __init__.py  dag.py  dagster_pipeline.py  failure_modes.py  lineage.py  model_gate.py  pipeline_gate.py  validation_gate.py  zenml_pipeline.py
platform/serving/: Dockerfile  (+10 more)
(+267 files in other folders)
