[project]
name = "mlops-platform"
version = "0.1.0"
description = "Credit Risk ML Platform — MLOps + AgentOps Learning Project"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pandera>=0.19.0",
    "mlflow>=2.10.0",
    "optuna>=3.6.0",
    "optuna-integration[mlflow]>=3.6.0",
    "dvc[s3]>=3.48.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "shap>=0.44.0",
    "numba>=0.56.0",
    "boto3>=1.34.0",
    "openlineage-python>=1.10.0",
    "requests>=2.31.0",
    "joblib>=1.3.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",    # for reading .xls UCI dataset
    "xlrd>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pre-commit>=3.7.0",
    "types-pyyaml",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "training", "pipelines", "monitoring", "serving"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-config=pyproject.toml"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
omit = ["tests/*"]
